Benefits fixed card vertical spacing

--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,7 @@ main {
     text-align: left;
     padding: 35px;
     border-radius: 20px;
+    margin: 0;
 }
 
 #benefits .card h2 {
